# Projekt-R

./: .gitmodules  CMakeLists.txt
src/: pimavilo_mapper.cpp
src/pimavilo/: Align.cpp  Align.h  Minimizers.cpp  Minimizers.hpp
